clusters/main/kubernetes/apps/reubah/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: reubah
  namespace: reubah
  annotations:
    gethomepage.dev/enabled: true
    gethomepage.dev/group: Tools
    gethomepage.dev/name: Reubah
    gethomepage.dev/href: https://reubah.${INGRESS_URL}/
    gethomepage.dev/icon: https://trueforge.org/img/hotlink-ok/chart-icons/reubah.webp
    gethomepage.dev/description: "File Format Converter"
    gethomepage.dev/instance: "internal"
spec:
  parentRefs:
    - name: envoy-internal
      namespace: envoy
      sectionName: https
  hostnames:
    - "reubah.${INGRESS_URL}"
  rules:
    - backendRefs:
        - name: reubah
          port: 8081
